--- a/.github/workflows/CI_UpdateWinToolkit_Dev.yml
+++ b/.github/workflows/CI_UpdateWinToolkit_Dev.yml
@@ -51,33 +51,31 @@ jobs:
       # Step 5: Controllo di sintassi del file generato
       # Verifica la correttezza sintattica di WinToolkit.ps1 prima del commit
       - name: Controllo sintassi WinToolkit.ps1
+        shell: pwsh
         run: |
-          # Controllo sintattico usando Get-Command per validare la sintassi
-          # Questo metodo è compatibile con PowerShell 7+ su Linux
-          pwsh -NoProfile -NonInteractive -Command "
-            try {
-              # Verifica che il file esista
-              if (-not (Test-Path './WinToolkit.ps1')) {
-                throw 'File WinToolkit.ps1 non trovato'
-              }
-              
-              # Usa l'AST (Abstract Syntax Tree) per controllare la sintassi
-              $scriptContent = Get-Content -Raw -Path './WinToolkit.ps1'
-              $errors = @()
-              $null = [System.Management.Automation.Language.Parser]::ParseInput($scriptContent, [ref]$null, [ref]$errors)
-              
-              if ($errors.Count -gt 0) {
-                Write-Host 'Errori di sintassi trovati:'
-                $errors | ForEach-Object { Write-Host $_.Message }
-                throw 'Controllo sintassi fallito'
-              } else {
-                Write-Host 'Controllo sintassi completato con successo - Nessun errore trovato'
-              }
-            } catch {
-              Write-Error $_.Exception.Message
-              exit 1
+          # Controllo sintattico usando l'AST di PowerShell
+          try {
+            # Verifica che il file esista
+            if (-not (Test-Path './WinToolkit.ps1')) {
+              throw 'File WinToolkit.ps1 non trovato'
             }
-          "
+            
+            # Usa l'AST (Abstract Syntax Tree) per controllare la sintassi
+            $scriptContent = Get-Content -Raw -Path './WinToolkit.ps1'
+            $errors = @()
+            $null = [System.Management.Automation.Language.Parser]::ParseInput($scriptContent, [ref]$null, [ref]$errors)
+            
+            if ($errors.Count -gt 0) {
+              Write-Host 'Errori di sintassi trovati:'
+              $errors | ForEach-Object { Write-Host "- $($_.Message)" }
+              throw 'Controllo sintassi fallito'
+            } else {
+              Write-Host 'Controllo sintassi completato con successo - Nessun errore trovato'
+            }
+          } catch {
+            Write-Error $_.Exception.Message
+            exit 1
+          }
 
       # Step 6: Commit automatico del file aggiornato
       # Utilizza azione specializzata per commit e push automatici
