--- a/.github/workflows/CI_UpdateWinToolkit_Dev.yml
+++ b/.github/workflows/CI_UpdateWinToolkit_Dev.yml
@@ -298,7 +298,7 @@ jobs:
 
       # Step 6: Commit automatico del file compilato (solo se i test passano)
       - name: Commit WinToolkit.ps1
-        if: steps.check_changes.outputs.has_relevant_changes == 'true' && steps.compile_test_and_commit.outputs.tests_passed == 'true'
+        if: steps.check_changes.outputs.has_relevant_changes == 'true' && steps.Test Estesi WinToolkit Compilato.outputs.tests_passed == 'true'
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: |
